--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "dependencies": {
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/cookie-parser": "^1.4.2",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/uuid": "^8.3.0",
     "@xstate/immer": "^0.2.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "cra-build-watch": "^3.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "ts-node": "^9.1.1",
+    "tsc-watch": "^4.2.9",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
@@ -23,7 +29,9 @@
     "start": "cra-build-watch",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-server": "ts-node server/index.ts",
+    "watch-server": "tsc-watch --noClear -p server/tsconfig.json --outDir dist --onSuccess \"node --inspect server/index.ts\""
   },
   "eslintConfig": {
     "extends": [
