--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "socket.io": "^4.0.1",
+    "socket.io-client": "^4.0.1",
     "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.1.2",
